--- a/index.html
+++ b/index.html
@@ -119,7 +119,16 @@
             }
         }
 
-        
+        function handleInitialData () {
+            return (dispatch) => {
+                return Promise.all([
+                    API.fetchTodos(),
+                    API.fetchGoals()
+                ]).then(([todos, goals]) => {
+                    dispatch(receiveDataAction(todos, goals))
+                })
+            }
+        }
 
         function todos (state = [], action) {
             switch(action.type) {
@@ -251,12 +260,15 @@
         class App extends React.Component {
             componentDidMount () {
                 const { store } = this.props
-                Promise.all([
-                    API.fetchTodos(),
-                    API.fetchGoals()
-                ]).then(([todos, goals]) => {
-                    store.dispatch(receiveDataAction(todos, goals))
-                })
+
+                store.dispatch(handleInitialData())
+
+                // Promise.all([
+                //     API.fetchTodos(),
+                //     API.fetchGoals()
+                // ]).then(([todos, goals]) => {
+                //     store.dispatch(receiveDataAction(todos, goals))
+                // })
 
                 store.subscribe(() => this.forceUpdate())
             }
