--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
             }
 
             removeItem = todo => {
-                this.props.store.dispatch(handleDeleteTodo(todo))
+                this.props.dispatch(handleDeleteTodo(todo))
             }
 
             toggleItem = id => {
-                this.props.store.dispatch(handleToggle(id))
+                this.props.dispatch(handleToggle(id))
             }
 
             render () {
@@ -235,14 +235,14 @@
         class Goals extends React.Component {
             addItem = (e) => {
                 e.preventDefault()
-                this.props.store.dispatch(handleAddGoal(
+                this.props.dispatch(handleAddGoal(
                     this.input.value,
                     () => this.input.value = ''
                 ))
             }
 
             removeItem = (goal) => {
-                this.props.store.dispatch(handleDeleteGoal(goal))
+                this.props.dispatch(handleDeleteGoal(goal))
             }
 
             render () {
@@ -260,35 +260,84 @@
         class App extends React.Component {
             componentDidMount () {
                 const { store } = this.props
-
                 store.dispatch(handleInitialData())
-
-                // Promise.all([
-                //     API.fetchTodos(),
-                //     API.fetchGoals()
-                // ]).then(([todos, goals]) => {
-                //     store.dispatch(receiveDataAction(todos, goals))
-                // })
-
                 store.subscribe(() => this.forceUpdate())
             }
 
             render() {
                 const { store } = this.props
-                const { todos, goals, loading } = store.getState()
+                const { loading } = store.getState()
 
                 if (loading) return <h3>Loading...</h3>
                 return (
                     <div>
-                        <Todos todos={todos} store={store}/>
-                        <Goals goals={goals} store={store}/>
+                        <ConnectedTodos/>
+                        <ConnectedGoals/>
                     </div>
+                )
+            }
+        }
+
+        class ConnectedTodos extends React.Component {
+            render() {
+                return (
+                    <Context.Consumer>
+                        {(store) => {
+                            const { todos } = store.getState()
+                            return <Todos 
+                                    todos={todos} 
+                                    dispatch={store.dispatch}
+                                    />
+                        }}
+                    </Context.Consumer>
+                )
+            }
+        }
+
+        class ConnectedGoals extends React.Component {
+            render() {
+                return (
+                    <Context.Consumer>
+                        {(store) => {
+                            const { goals } = store.getState()
+                            return <Goals 
+                                        goals={goals} 
+                                        dispatch={store.dispatch}
+                                    />
+                        }}
+                    </Context.Consumer>
+                )
+            }
+        }
+
+        class ConnectedApp extends React.Component {
+            render() {
+                return (
+                    <Context.Consumer>
+                        {(store) => (
+                            <App store={store}/>
+                        )}
+                    </Context.Consumer>
+                )
+            }
+        }
+
+        const Context = React.createContext()
+
+        class Provider extends React.Component {
+            render () {
+                return (
+                    <Context.Provider value={this.props.store}>
+                        {this.props.children}
+                    </Context.Provider>
                 )
             }
         }
         
         ReactDOM.render(
-            <App store={store}/>,
+            <Provider store={store}>
+                <ConnectedApp/>
+            </Provider>,
             document.getElementById('app')
         )
     </script>
